2008-04-10  Øyvind Kolås  <pippin@o-hand.com>

	* doc/reference/clutter-box2d-sections.txt: split the documentation
	over three files, ClutterBox2D, ClutterBox2D+actor and
	ClutterBox2DJoint.
	* doc/reference/clutter-box2d-docs.sgml: include the generated xml
	files.

2008-04-10  Øyvind Kolås  <pippin@o-hand.com>

	* doc/reference/version.xml.in: missed this file when adding gtk-doc
	support.

2008-04-10  Øyvind Kolås  <pippin@o-hand.com>
	
	Reorganized source and added gtk-doc hooks to build system.

	* box2d/Makefile.am: build a temporary library for box2d instead
	of building it together with clutter-box2d.
	* clutter-box2d.cpp:
	* clutter-box2d.h: moved these ...
	* clutter-box2d: ... here to a new directory.
	* clutter-box2d/Makefile.am: added.
	* README: updated
	* examples/Makefile.am: updated for new location of box2d

	* configure.ac:
	* doc: added
	* doc/Makefile.am:
	* doc/reference:
	* doc/reference/clutter-box2d.types:
	* doc/reference/clutter-box2d-docs.sgml:
	* doc/reference/Makefile.am:
	* Makefile.am:
	* autogen.sh: integrated gtk-doc.

2008-04-10  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.cpp: add a scale factor that makes 1px = ~5cm in
	the simulation, making it smaller currently harms stability of box2d,
	it should be made user tunable. Modified default gravity to be
	of similar magnitude to dimensions.
	* README: updated TODO

2008-04-10  Øyvind Kolås  <pippin@o-hand.com>

	* examples/Makefile.am: updated build system according to expanded
	sandbox.
	* examples/blockbox.[ch]: simplified logic of manin program and split
	functionality out into separate files.

	* examples/scenes.[ch]: data base of the available scenes as well as
	control over which scene is currently being shown.
	* examples/actor-manipulator.[ch]: draft stage capture based actor
	movement and manipulation, has mods both for dynamic box2d objects and
	non physics based movement.
	* examples/util.[ch]: misc utility functions.