@@ -1,3 +1,13 @@
+2008-04-10  Emmanuele Bassi  <ebassi@openedhand.com>
+
+	* clutter-box2d/clutter-box2d.h: Document the sections
+
+	* doc/reference/clutter-box2d-sections.txt: Change the sections
+	title.
+
+	* examples/Makefile.am: Use AM_LDFLAGS (so that automake does not
+	complain)
+
 2008-04-10  Øyvind Kolås  <pippin@o-hand.com>
 
 	* doc/reference/clutter-box2d-sections.txt: split the documentation
